PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/BingoBoard__c.object-meta.xml
<CustomObject>
    <description>대유넥스티어 2023 송년회에서 사용 할 Bingo Board Object</description>
    <label>Bingo Board</label>
    <nameField>
        <displayFormat>Board-{0}</displayFormat>
        <label>Bingo Board No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>