PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/BingoLine__c.field-meta.xml
<CustomField>
    <fullName>BingoLine__c</fullName>
    <defaultValue>&quot;none&quot;</defaultValue>
    <label>BingoLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>