PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/BoardOwner__c.field-meta.xml
<CustomField>
    <fullName>BoardOwner__c</fullName>
    <label>Bingo Board Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>