PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/Cell_00__c.field-meta.xml
<CustomField>
    <fullName>Cell_00__c</fullName>
    <label>Cell_00</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>