PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/Cell_01__c.field-meta.xml
<CustomField>
    <fullName>Cell_01__c</fullName>
    <label>Cell_01</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>