PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/fm_BingoLine10__c.field-meta.xml
<CustomField>
    <fullName>fm_BingoLine10__c</fullName>
    <formula>Cell_04__c + Cell_14__c + Cell_24__c + Cell_34__c + Cell_44__c = 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BingoLine10</label>
    <type>Checkbox</type>
</CustomField>