PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/fm_BingoLine11__c.field-meta.xml
<CustomField>
    <fullName>fm_BingoLine11__c</fullName>
    <formula>Cell_00__c + Cell_11__c + Cell_22__c + Cell_33__c + Cell_44__c = 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BingoLine11</label>
    <type>Checkbox</type>
</CustomField>