PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/fm_BingoLine12__c.field-meta.xml
<CustomField>
    <fullName>fm_BingoLine12__c</fullName>
    <formula>Cell_04__c + Cell_13__c + Cell_22__c + Cell_31__c + Cell_40__c = 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BingoLine12</label>
    <type>Checkbox</type>
</CustomField>