PA_Education/TestMenifest/force-app/main/default/objects/BingoBoard__c/fields/IsBingo__c.field-meta.xml
<CustomField>
    <fullName>IsBingo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBingo</label>
    <type>Checkbox</type>
</CustomField>